@@ -12,6 +12,7 @@ rules-edit: new action  'name-removePrefix' 'name-removeSuffix' 'app-add-force'
 rules-edit: action 'from/to-calculate-zones' add new mode 'unneeded-tag-add' to add rule tag (unneeded-from/to-zone) where unneeded zones are available
 rules-edit: filter 'is.unused.fast' extend for nat rules
 rules-edit: new actions 'dst-Remove-Objects-Matching-Filter' and 'src-Remove-Objects-Matching-Filter' to remove objects matching a specific filter
+rules-edit: new action 'securityProfile-Profile-Set' to set individual profiles
 address-edit: new filter 'description regex'
 address-edit: new field in exportToExcel : 'resolveip'
 service-edit: new filter 'description regex'
